# rethinking-neural-id

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: experiments.md  setup.md
scripts/: prepare_raw_data.py
scripts/bias_analysis/: id_est_bias.ipynb
scripts/cnn_analysis/: cnn_reps_analysis.ipynb  cnn_reps_computation.py
scripts/llm_analysis/: compute_layerwise_metrics.py  extract_llm_representations.py  llm_analysis.ipynb
scripts/vit_analysis/: compute_layerwise_metrics_vits.py  extract_vit_representations.py  vit_analysis.ipynb
src/rethinking_neural_id/: __init__.py  artifacts.py  paths.py  registry.py
src/rethinking_neural_id/metrics/: __init__.py  layerwise.py
src/rethinking_neural_id/metrics/cnn/: __init__.py  entropy.py  intrinsic_dimension.py  pairwise.py
src/rethinking_neural_id/pipelines/: __init__.py  cnn_metrics.py  llm_extract.py  llm_metrics.py  vit_extract.py  vit_metrics.py
src/rethinking_neural_id/plotting/: __init__.py  llm.py  vit.py
